--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/about/portfolio.png">
   </head>
   <body>
     <div id="root"></div>
